--- a/config/application-name/service.yaml
+++ b/config/application-name/service.yaml
@@ -1,12 +1,13 @@
+#@ load("application-name.lib.star", "app")
+
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: application-service-name
+  name: #@ app.service.name
 spec:
   type: NodePort
-  selector:
-    app.kubernetes.io/name: application-name
+  selector: #@ app.labels
   ports:
-  - port: 8080
+  - port: #@ app.service.port
     targetPort: 80
