--- a/config/application-name/deployment.yaml
+++ b/config/application-name/deployment.yaml
@@ -1,3 +1,5 @@
+#@ load("application-name.lib.star", "app")
+
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -5,12 +7,10 @@ metadata:
   name: application-name-server
 spec:
   selector:
-    matchLabels:
-      app.kubernetes.io/name: application-name
+    matchLabels: #@ app.labels
   template:
     metadata:
-      labels:
-        app.kubernetes.io/name: application-name
+      labels: #@ app.labels
     spec:
       containers:
         - name: webserver
