Step 2: externalize user config to data values
Co-authored-by: "Cari Dean" <cdean@pivotal.io>

--- a/config/application-name/deployment.yaml
+++ b/config/application-name/deployment.yaml
@@ -18,4 +18,4 @@ spec:
           image: jtigger/application-name:latest
           env:
             - name: ENVIRONMENT_NAME
-              value: local-dev
+              value: #@ data.values.environmentName
